# ParadOPTIx

./: CMakeLists.txt  README.md
ParadOPTIx/: CMakeLists.txt  CUDABuffer.h  LaunchParams.h  Model.cpp  Model.h  ParadOPTIx.sln  ParadOPTIx.vcxproj  ParadOPTIx.vcxproj.filters  Renderer.cpp  Renderer.h  devicePrograms.cu  gdt.lib  main.cpp  optix7.h
ParadOPTIx/include/glfWindow/: GLFWindow.cpp  GLFWindow.h
ParadOPTIx/x64/Debug/: ParadOPTIx.exe.recipe  ParadOPTIx.exp  ParadOPTIx.ilk  ParadOPTIx.vcxproj.FileListAbsolute.txt  vc142.idb
ParadOPTIx/x64/Debug/ParadOPTIx.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ParadOPTIx.lastbuildstate  ParadOPTIx.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
